# for-research

./: Cargo.toml  README.md
src/: app_state.rs  config.rs  controller.rs  errors.rs  main.rs
src/auth/: auth_controller.rs  auth_error.rs  auth_model.rs  auth_service.rs  jwt_middleware.rs  mod.rs
src/common/: pagination.rs
src/gemini/: gemini_api_model.rs  gemini_api_util.rs  keyword_extraction_prompt.txt  mod.rs
src/redis/: mod.rs  redis_repository.rs
src/user/: mod.rs  user_controller.rs  user_error.rs  user_model.rs  user_repository.rs  user_service.rs
src/youtube/: mod.rs  youtube_video_controller.rs
src/youtube/youtube_channel/: mod.rs  youtube_channel_error.rs  youtube_channel_model.rs  youtube_channel_repository.rs  youtube_channel_service.rs
src/youtube/youtube_data_api/: mod.rs  youtube_data_api_error.rs  youtube_data_api_model.rs  youtube_data_api_util.rs
src/youtube/youtube_video/: mod.rs  youtube_raw_video_repository.rs  youtube_video_controller.rs  youtube_video_model.rs  youtube_video_repository.rs  youtube_video_scheduler.rs  youtube_video_service.rs
src/youtube_data/: mod.rs  youtube_data_model.rs  youtube_util.rs
